fratture su paraview 08/06

--- a/Project/srcParaview/CMakeLists.txt
+++ b/Project/srcParaview/CMakeLists.txt
@@ -1,3 +1,4 @@
+list(APPEND srcParaview_sources "${CMAKE_CURRENT_SOURCE_DIR}/Paraview.cpp")
 list(APPEND srcParaview_headers "${CMAKE_CURRENT_SOURCE_DIR}/Paraview.hpp")
 
 
